<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="gocut_purchase_Privacy">Privacy Policy</string>
    <string name="gocut_purchase_alert_subtitle">Over 91.98% of the new users choose 3 day free trial.Unlock all the following features</string>
    <string name="gocut_purchase_all_features">PRO users enjoy all the features</string>
    <string name="gocut_purchase_all_features_purchased">You can enjoy all the features</string>
    <string name="gocut_purchase_cancel_anytime">Cancel Anytime</string>
    <string name="gocut_purchase_close">Close</string>
    <string name="gocut_purchase_continue">Continue</string>
    <string name="gocut_purchase_custom_background">Custom background</string>
    <string name="gocut_purchase_effects">Special effects</string>
    <string name="gocut_purchase_enjoy_features">Enjoy all features and materials</string>
    <string name="gocut_purchase_filter">Filter</string>
    <string name="gocut_purchase_font">Font</string>
    <string name="gocut_purchase_free_trial">3 DAY FREE TRIAL</string>
    <string name="gocut_purchase_hd">HD export</string>
    <string name="gocut_purchase_make_videos">Make great videos</string>
    <string name="gocut_purchase_monthly_title">Weekly:$6.99/Week</string>
    <string name="gocut_purchase_more">Stay tuned</string>
    <string name="gocut_purchase_now">Subscribe now</string>
    <string name="gocut_purchase_popular">Most Popular</string>
    <string name="gocut_purchase_quite">Do you really want to quit the free trial?</string>
    <string name="gocut_purchase_remove_watermark">Remove watermark</string>
    <string name="gocut_purchase_restore">Restore</string>
    <string name="gocut_purchase_sticker">Stickers</string>
    <string name="gocut_purchase_subscribe_desc">Payment will be charged to iTunes Account at confirmation of purchase. Subscription automatically renews unless auto-renew is turned off at least\u0020\u002024-hours before the end of the current period. Your account will be charged for renewal within 24-hour prior to the end of the current period, and identify the cost of the renewal. Subscriptions may be managed by the user and auto-renewal may be turned off by going to the user\'s Account Settings after purchase.</string>
    <string name="gocut_purchase_subscribe_policy">Subscription Policy</string>
    <string name="gocut_purchase_terms">Terms of use</string>
    <string name="gocut_purchase_transition">Transition</string>
    <string name="gocut_purchase_yearly_buy">Subscribe</string>
    <string name="gocut_purchase_yearly_buy_config">FREE TRIAL</string>
    <string name="gocut_purchase_yearly_title">Yearly:$39.99/Year</string>
    <string name="gocut_purchase_yearly_title_normal">Then $39.99/year, auto-renewable</string>
    <string name="mn_app_brvah_load_end">No more</string>
    <string name="mn_app_brvah_load_failed">Load failed, try again</string>
    <string name="mn_app_brvah_loading">Loading</string>
    <string name="mn_app_cancel">Cancel</string>
    <string name="mn_app_confirm">Confirm</string>
    <string name="mn_app_contact_us">Contact us\u0020</string>
    <string name="mn_app_done">Done</string>
    <string name="mn_app_home_title">Create</string>
    <string name="mn_app_import">import</string>
    <string name="mn_app_mode_camera">Camera</string>
    <string name="mn_app_mode_editor">Editor</string>
    <string name="mn_app_mode_template">Template</string>
    <string name="mn_app_privacy_title">Privacy Agreements</string>
    <string name="mn_app_setting">Setting</string>
    <string name="mn_app_splash_slogan">Easy editing, free expression</string>
    <string name="mn_app_user_terms">User Agreement</string>
    <string name="mn_cam_func_add_bgm">Add music</string>
    <string name="mn_cam_func_camera_id_switch">Camera</string>
    <string name="mn_cam_func_exposure">Exposure</string>
    <string name="mn_cam_func_face_beauty">Smoother</string>
    <string name="mn_cam_func_flash">Flash</string>
    <string name="mn_cam_func_zoom">Zoom</string>
    <string name="mn_cam_permission_request">This feature needs permission for camera and audio recording.</string>
    <string name="mn_edit_action">Action</string>
    <string name="mn_edit_adjust_colortemp">ColorTemp</string>
    <string name="mn_edit_adjust_contrast">Contrast</string>
    <string name="mn_edit_adjust_fade">Fade</string>
    <string name="mn_edit_adjust_highlight">Highlight</string>
    <string name="mn_edit_adjust_hue">Hue</string>
    <string name="mn_edit_adjust_luminance">Luminance</string>
    <string name="mn_edit_adjust_noise">Noise</string>
    <string name="mn_edit_adjust_saturation">Saturation</string>
    <string name="mn_edit_adjust_shadow">Shadow</string>
    <string name="mn_edit_adjust_sharpness">Sharpness</string>
    <string name="mn_edit_adjust_vignette">Vignette</string>
    <string name="mn_edit_alpha_change">Alpha</string>
    <string name="mn_edit_angel">Little Angel</string>
    <string name="mn_edit_audio_direct">Audio Direct</string>
    <string name="mn_edit_back_home">Home</string>
    <string name="mn_edit_background_blur">Blur</string>
    <string name="mn_edit_background_color">Color</string>
    <string name="mn_edit_background_custom">Custom</string>
    <string name="mn_edit_background_gradual">Gradual</string>
    <string name="mn_edit_bgm_edit">Edit</string>
    <string name="mn_edit_border">Border</string>
    <string name="mn_edit_bubble">Bubble</string>
    <string name="mn_edit_butterfly">Butterfly</string>
    <string name="mn_edit_camcorder">CAMCORDER</string>
    <string name="mn_edit_change_style">Change Style</string>
    <string name="mn_edit_change_zoom">Zoom</string>
    <string name="mn_edit_check_more">more</string>
    <string name="mn_edit_chroma_accuracy">Accurate</string>
    <string name="mn_edit_cinema">Cinema</string>
    <string name="mn_edit_clip_img_anim">Image animation</string>
    <string name="mn_edit_clip_img_duration">Image duration</string>
    <string name="mn_edit_clip_transform_fit_in">fit</string>
    <string name="mn_edit_clip_transform_fit_out">fill</string>
    <string name="mn_edit_collage_motion">Tiles</string>
    <string name="mn_edit_collage_top">Top</string>
    <string name="mn_edit_common_cancel">No</string>
    <string name="mn_edit_common_yes">Yes</string>
    <string name="mn_edit_create_video">create video</string>
    <string name="mn_edit_dubbing_music_downmountain">down mountain</string>
    <string name="mn_edit_duplicate_title">Duplicate</string>
    <string name="mn_edit_edit_video">Edit video</string>
    <string name="mn_edit_effect_position">Position</string>
    <string name="mn_edit_exit_confirm_content">exit？</string>
    <string name="mn_edit_export_bitrate">Bitrate</string>
    <string name="mn_edit_export_failed">Export failed</string>
    <string name="mn_edit_export_format">Format</string>
    <string name="mn_edit_export_fps">Fps</string>
    <string name="mn_edit_export_h265">H265 First</string>
    <string name="mn_edit_export_hardware">Hardware</string>
    <string name="mn_edit_export_resolution">Resolution</string>
    <string name="mn_edit_export_soft_hard">Soft-Hardware</string>
    <string name="mn_edit_export_software">Software</string>
    <string name="mn_edit_exporting">Exporting...</string>
    <string name="mn_edit_firework">Fireworks</string>
    <string name="mn_edit_font">Font</string>
    <string name="mn_edit_foodie">Foodie</string>
    <string name="mn_edit_guide_angle">Slide the wheel left and right to adjust the direction</string>
    <string name="mn_edit_guide_location">Click below to fine-tune the position</string>
    <string name="mn_edit_kaleidoscope">Kaleidoscope</string>
    <string name="mn_edit_keyframe_animator_title">Animator</string>
    <string name="mn_edit_kids">Kids</string>
    <string name="mn_edit_leak">Leak</string>
    <string name="mn_edit_love">Love</string>
    <string name="mn_edit_mask_invert">Invert</string>
    <string name="mn_edit_mask_linear">Linear</string>
    <string name="mn_edit_mask_mirror">Mirror</string>
    <string name="mn_edit_mask_radial">Radial</string>
    <string name="mn_edit_mask_rectangle">Rectangle</string>
    <string name="mn_edit_mirror">Magic Mirror</string>
    <string name="mn_edit_mosaic_degree">Degree</string>
    <string name="mn_edit_music_fade_in_turn_off">Fade-in off</string>
    <string name="mn_edit_music_fade_in_turn_on">Fade-in on</string>
    <string name="mn_edit_music_fade_out_turn_off">Fade-out off</string>
    <string name="mn_edit_music_fade_out_turn_on">Fade-out on</string>
    <string name="mn_edit_music_repeat_turn_off">Repeat off</string>
    <string name="mn_edit_music_repeat_turn_on">Repeat on</string>
    <string name="mn_edit_my_projects">My projects</string>
    <string name="mn_edit_none">None</string>
    <string name="mn_edit_party">Party</string>
    <string name="mn_edit_plastic">Plastic</string>
    <string name="mn_edit_project">Project</string>
    <string name="mn_edit_qrcode_scan">QR-Code</string>
    <string name="mn_edit_quit_confirm_title">Are you sure to quit editing? The edit will not be saved after exiting.</string>
    <string name="mn_edit_reset">Reset</string>
    <string name="mn_edit_reset_text">reset</string>
    <string name="mn_edit_roman">Roman</string>
    <string name="mn_edit_sns">SNS</string>
    <string name="mn_edit_special">Special Day</string>
    <string name="mn_edit_split">Split</string>
    <string name="mn_edit_split_progress_title">Split</string>
    <string name="mn_edit_split_splitpoint">split point</string>
    <string name="mn_edit_subeffect_off">Off</string>
    <string name="mn_edit_subeffect_on">On</string>
    <string name="mn_edit_subtitle_align">Align</string>
    <string name="mn_edit_subtitle_anim_state_off">Anim off</string>
    <string name="mn_edit_subtitle_anim_state_on">Anim on</string>
    <string name="mn_edit_subtitle_blod_off">Blod Off</string>
    <string name="mn_edit_subtitle_blod_on">Blod On</string>
    <string name="mn_edit_subtitle_font">Font</string>
    <string name="mn_edit_subtitle_input">Input</string>
    <string name="mn_edit_subtitle_italic_off">Italic Off</string>
    <string name="mn_edit_subtitle_italic_on">Italic On</string>
    <string name="mn_edit_subtitle_shadow">Shadow</string>
    <string name="mn_edit_subtitle_stroke">Border</string>
    <string name="mn_edit_template_center">Effects</string>
    <string name="mn_edit_tips_cannot_operate">Operation failed</string>
    <string name="mn_edit_tips_error_params">Error parameter</string>
    <string name="mn_edit_tips_error_template">Error template</string>
    <string name="mn_edit_tips_export_cancel">Export canceled</string>
    <string name="mn_edit_tips_input_text">Enter text</string>
    <string name="mn_edit_tips_no_allow_del_last">Not allow to delete</string>
    <string name="mn_edit_tips_no_allow_set_last_trans">Not allow to set transition</string>
    <string name="mn_edit_tips_no_allow_trim">Not allow to trim</string>
    <string name="mn_edit_tips_no_define">Undefine</string>
    <string name="mn_edit_tips_no_support">Operation is not support</string>
    <string name="mn_edit_tips_template_qrcode_error">Please choose right template!</string>
    <string name="mn_edit_tips_template_theme_error">Theme error</string>
    <string name="mn_edit_title_adjust">Adjust</string>
    <string name="mn_edit_title_filter">Filter</string>
    <string name="mn_edit_title_ratio">Ratio</string>
    <string name="mn_edit_title_rotate">Rotate</string>
    <string name="mn_edit_zoom_in">Zoom in</string>
    <string name="mn_edit_zoom_out">Zoom out</string>
    <string name="mn_gallery_selected_import">Next</string>
    <string name="mn_gallery_template_selected_change_position_tip">Long press to sort the clips</string>
    <string name="mn_gallery_template_selected_count_description">Please select %s clips</string>
</resources>